Adjust MediaControls for effective zoom when dropping controls.

When computing how many controls fit in the media control panel, the
effective zoom was ignored.  This caused the control width to appear
to change as they zoomed, even though the available space in the bar
also changed proportionally.  The effect was that zooming would
change which controls were visible in the panel.

This CL adjusts for the ComputedStyle's effective zoom.

BUG=630466
TEST=media-controls-fit-properly-while-zoomed.html

Review-Url: https://codereview.chromium.org/2219673004
Cr-Commit-Position: refs/heads/master@{#410644}

Former-commit-id: 5d215e472cf4e2e831aa80b9eed4eb82beffdece